--- a/git_clone.yaml
+++ b/git_clone.yaml
@@ -1,6 +1,8 @@
 ---
  - hosts: localhost
-   become: azureuser
+   become: yes
+   become_user: azureuser
+   become_method: su
    tasks:
    - name: Clone a github repository
      git:
